syntax = "proto3";

package keyvalue;

service KeyValue {
  rpc Store(StoreRequest) returns (StoreResponse);
  rpc Retrieve(RetrieveRequest) returns (RetrieveResponse);
}

message StoreRequest {
  string key = 1;
  string value = 2;
}

message StoreResponse {}

message RetrieveRequest {
  string key = 1;
}

message RetrieveResponse {
  string value = 1;
}
